# E7FileManager

./: CMakeLists.txt  Dockerfile  README.md  docker_image_run.ps1  docker_image_run.sh
src/: filesystem.cpp  filesystem.hpp  filesystem_test.cpp  gui.cpp  gui.hpp  gui_test.cpp  main.cpp  network.cpp  network.hpp  network_test.cpp
